hphp/hack/test/typecheck/reactive/rx_if_implements2.php.exp
File "rx_if_implements2.php", line 6, characters 1-43:
`__OnlyRxIfImpl` annotations are only valid on class methods. (Parsing[1002])
